--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,253 @@
+adb==1.3.0
+aiodns==1.1.1
+aiohttp==3.4.4
+altgraph==0.16.1
+Appium-Python-Client==0.26
+appnope==0.1.0
+APScheduler==3.6.0
+asn1crypto==0.24.0
+astroid==2.1.0
+async-timeout==3.0.1
+attrs==18.2.0
+Automat==0.7.0
+autopep8==1.4.3
+backcall==0.1.0
+beautifulsoup4==4.6.0
+bleach==3.0.2
+cachetools==2.1.0
+captcha-solver==0.1.1
+cefpython3==66.0
+certifi==2018.10.15
+cffi==1.12.3
+chardet==3.0.4
 Click==7.0
-Flask==1.1.1
+cloudpickle==0.6.1
+constantly==15.1.0
+cryptography==2.6.1
+cssselect==1.0.3
+cx-Freeze==5.1.1
+cycler==0.10.0
+Cython==0.28.5
+dask==1.0.0
+decorator==4.3.0
+defusedxml==0.5.0
+dynamics365crm-python==0.1.2
+emoji==0.5.0
+entrypoints==0.2.3
+fake-useragent==0.1.11
+Faker==1.0.0
+Flask==1.0.2
+Flask-APScheduler==1.11.0
+Flask-PyMongo==2.3.0
+flask-sqlacodegen==1.1.6.1
+future==0.17.1
+gevent==1.3.7
+gobject==0.1.0
+google-api-python-client==1.7.3
+google-auth==1.5.0
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.2.0
+greenlet==0.4.15
+httplib2==0.11.3
+hyperlink==19.0.0
+idna==2.7
+idna-ssl==1.1.0
+incremental==17.5.0
+inflect==2.1.0
+ipykernel==5.1.0
+ipython==7.0.1
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+iso8601==0.1.12
+isort==4.3.8
 itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-Werkzeug==0.16.0
+jedi==0.13.1
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+kiwisolver==1.0.1
+langdetect==1.0.7
+lazy-object-proxy==1.3.1
+libusb1==1.7
+lxml==4.3.3
+macholib==1.11
+MarkupSafe==1.0
+matplotlib==3.0.2
+mccabe==0.6.1
+mistune==0.8.4
+multidict==4.4.2
+names==0.3.0
+nbconvert==5.4.0
+nbformat==4.4.0
+networkx==2.2
+notebook==5.7.0
+numpy==1.14.5
+oauthlib==2.1.0
+pandas==0.24.1
+pandocfilters==1.4.2
+parsel==1.5.1
+parso==0.3.1
+pefile==2018.8.8
+pep8==1.7.1
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==5.1.0
+prometheus-client==0.4.2
+prompt-toolkit==2.0.6
+ptyprocess==0.6.0
+pyasn1==0.4.3
+pyasn1-modules==0.2.2
+pycares==2.3.0
+pycodestyle==2.5.0
+pycparser==2.19
+PyDispatcher==2.0.5
+Pygments==2.2.0
+PyHamcrest==1.9.0
+PyInstaller==3.4
+pylint==2.2.2
+pymongo==3.7.2
+pymssql==2.1.4
+pyobjc==5.2
+pyobjc-core==5.2
+pyobjc-framework-Accounts==5.2
+pyobjc-framework-AddressBook==5.2
+pyobjc-framework-AppleScriptKit==5.2
+pyobjc-framework-AppleScriptObjC==5.2
+pyobjc-framework-ApplicationServices==5.2
+pyobjc-framework-Automator==5.2
+pyobjc-framework-AVFoundation==5.2
+pyobjc-framework-AVKit==5.2
+pyobjc-framework-CalendarStore==5.2
+pyobjc-framework-CFNetwork==5.2
+pyobjc-framework-CloudKit==5.2
+pyobjc-framework-Cocoa==5.2
+pyobjc-framework-Collaboration==5.2
+pyobjc-framework-ColorSync==5.2
+pyobjc-framework-Contacts==5.2
+pyobjc-framework-ContactsUI==5.2
+pyobjc-framework-CoreAudio==5.2
+pyobjc-framework-CoreAudioKit==5.2
+pyobjc-framework-CoreBluetooth==5.2
+pyobjc-framework-CoreData==5.2
+pyobjc-framework-CoreLocation==5.2
+pyobjc-framework-CoreMedia==5.2
+pyobjc-framework-CoreMediaIO==5.2
+pyobjc-framework-CoreML==5.2
+pyobjc-framework-CoreServices==5.2
+pyobjc-framework-CoreSpotlight==5.2
+pyobjc-framework-CoreText==5.2
+pyobjc-framework-CoreWLAN==5.2
+pyobjc-framework-CryptoTokenKit==5.2
+pyobjc-framework-DictionaryServices==5.2
+pyobjc-framework-DiscRecording==5.2
+pyobjc-framework-DiscRecordingUI==5.2
+pyobjc-framework-DiskArbitration==5.2
+pyobjc-framework-DVDPlayback==5.2
+pyobjc-framework-EventKit==5.2
+pyobjc-framework-ExceptionHandling==5.2
+pyobjc-framework-ExternalAccessory==5.2
+pyobjc-framework-FinderSync==5.2
+pyobjc-framework-FSEvents==5.2
+pyobjc-framework-GameCenter==5.2
+pyobjc-framework-GameController==5.2
+pyobjc-framework-GameKit==5.2
+pyobjc-framework-GameplayKit==5.2
+pyobjc-framework-ImageCaptureCore==5.2
+pyobjc-framework-IMServicePlugIn==5.2
+pyobjc-framework-InputMethodKit==5.2
+pyobjc-framework-InstallerPlugins==5.2
+pyobjc-framework-InstantMessage==5.2
+pyobjc-framework-Intents==5.2
+pyobjc-framework-IOSurface==5.2
+pyobjc-framework-iTunesLibrary==5.2
+pyobjc-framework-LatentSemanticMapping==5.2
+pyobjc-framework-LaunchServices==5.2
+pyobjc-framework-libdispatch==5.2
+pyobjc-framework-LocalAuthentication==5.2
+pyobjc-framework-MapKit==5.2
+pyobjc-framework-MediaAccessibility==5.2
+pyobjc-framework-MediaLibrary==5.2
+pyobjc-framework-MediaPlayer==5.2
+pyobjc-framework-MediaToolbox==5.2
+pyobjc-framework-ModelIO==5.2
+pyobjc-framework-MultipeerConnectivity==5.2
+pyobjc-framework-NetFS==5.2
+pyobjc-framework-NetworkExtension==5.2
+pyobjc-framework-NotificationCenter==5.2
+pyobjc-framework-OpenDirectory==5.2
+pyobjc-framework-OSAKit==5.2
+pyobjc-framework-Photos==5.2
+pyobjc-framework-PhotosUI==5.2
+pyobjc-framework-PreferencePanes==5.2
+pyobjc-framework-PubSub==5.2
+pyobjc-framework-QTKit==5.2
+pyobjc-framework-Quartz==5.2
+pyobjc-framework-SafariServices==5.2
+pyobjc-framework-SceneKit==5.2
+pyobjc-framework-ScreenSaver==5.2
+pyobjc-framework-ScriptingBridge==5.2
+pyobjc-framework-SearchKit==5.2
+pyobjc-framework-Security==5.2
+pyobjc-framework-SecurityFoundation==5.2
+pyobjc-framework-SecurityInterface==5.2
+pyobjc-framework-ServiceManagement==5.2
+pyobjc-framework-Social==5.2
+pyobjc-framework-SpriteKit==5.2
+pyobjc-framework-StoreKit==5.2
+pyobjc-framework-SyncServices==5.2
+pyobjc-framework-SystemConfiguration==5.2
+pyobjc-framework-VideoToolbox==5.2
+pyobjc-framework-Vision==5.2
+pyobjc-framework-WebKit==5.2
+pyodbc==4.0.26
+pyOpenSSL==19.0.0
+pyparsing==2.3.0
+Pypubsub==4.0.0
+pytesseract==0.2.0
+python-dateutil==2.7.3
+python-magic-bin==0.4.14
+python-thumbnails==0.5.1
+pytz==2018.4
+PyWavelets==1.0.1
+PyYAML==5.1.2
+pyzmq==17.1.2
+qtconsole==4.4.2
+queuelib==1.5.0
+requests==2.6.0
+requests-oauthlib==1.0.0
+rsa==3.4.2
+schedule==0.6.0
+scikit-image==0.14.1
+scipy==1.2.0
+Scrapy==1.6.0
+selenium==3.11.0
+Send2Trash==1.5.0
+serial==0.0.97
+service-identity==18.1.0
+simplegeneric==0.8.1
+six==1.13.0
+sqlacodegen==2.0.1
+SQLAlchemy==1.3.3
+terminado==0.8.1
+testpath==0.4.2
+text-unidecode==1.2
+toolz==0.9.0
+tornado==5.1.1
+traitlets==4.3.2
+Twisted==19.2.0
+typed-ast==1.3.1
+tzlocal==1.5.1
+uritemplate==3.0.0
+urllib3==1.23
+w3lib==1.20.0
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.4.2
+wrapt==1.11.1
+wxPython==4.0.3
+yarl==1.2.6
+zope.interface==4.6.0
